--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -10,9 +10,11 @@ jobs:
         steps:
             - name: checkout repo
               uses: actions/checkout@v4
-            - name: Welcome message
-              run: echo "my first Github Actions Job"
-            - name: List files
-              run: ls
-            - name: Read file
-              run: cat README.md
+
+            - name: list and Read file
+              run: |
+                echo "my first Github Actions Job"
+                ls
+                cat README.md
+            - name: Generate ASCII Artwork
+              run: cowsay -f dragon "RUN for cover, I am a DRAGON...RAWR" >>dragon.txt
