--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -14,6 +14,6 @@ jobs:
           run: ls -ltra
           
         - name: Executing shell script
-          run:
-            chmod +X ./ascii-script.sh
+          run: |
+            chmod +x ./ascii-script.sh
             ./ascii-script.sh
