--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -15,5 +15,5 @@ jobs:
           
         - name: Executing shell script
           run: |
-            chmod +x ascii-script.sh
-            .github\workflows\ascii-script.sh
+            chmod +x .github/workflows/ascii-script.sh
+            .github/workflows/ascii-script.sh
