--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -4,16 +4,53 @@ on:
     push
 
 jobs:
-    ascii_job:
+    build_job-1:
         runs-on: ubuntu-latest
         steps:
-        - name: checkout repo
-          uses: actions/checkout@v4
-
-        - name: List Repo Files
-          run: ls -ltra
+        - name: Install Cowsay Program
+          run: sudo apt-get install cowsay -y
           
-        - name: Executing shell script
-          run: |
-            chmod +x .github/workflows/ascii-script.sh
-            .github/workflows/ascii-script.sh
+        - name: Executing cowsay CMD
+          run: cowsay -f dragon "RUN for cover, I am a DRAGON...RAWR" >>dragon.txt
+
+        - name: sleep for 30 seconds
+          run: sleep 30
+
+    test_job-2:
+        runs-on: ubuntu-latest
+        steps:
+        - name: sleep for 30 seconds
+          uses: sleep 30
+
+        - name: Test File Exists
+          run: grep -i "dragon" dragon.txt
+
+    deploy_job-3:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Read File
+          run: cat dragon.txt
+        
+        - name: Deploy
+          run: echo Deploying ... .. .
+
+
+
+
+
+
+
+
+        # runs-on: ubuntu-latest
+        # steps:
+        # - name: checkout repo
+        #   uses: actions/checkout@v4
+
+        # - name: List Repo Files
+        #   run: ls -ltra
+          
+        # - name: Executing shell script
+        #   run: |
+        #     chmod +x .github/workflows/ascii-script.sh 
+        #     .github/workflows/ascii-script.sh
+    
