--- a/.github/workflows/first-workflow.yaml
+++ b/.github/workflows/first-workflow.yaml
@@ -10,6 +10,7 @@ jobs:
         steps:
             - name: checkout repo
               uses: actions/checkout@v4
+              
             - name: list and Read file
               run: |
                 echo "my first Github Actions Job"
@@ -25,3 +26,17 @@ jobs:
             #   run: ls
             # - name: Read file
             #   run: cat README.md
+
+            # runs-on: ubuntu-latest
+        # steps:
+        # - name: checkout repo
+        #   uses: actions/checkout@v4
+
+        # - name: List Repo Files
+        #   run: ls -ltra
+          
+        # - name: Executing shell script
+        #   run: |
+        #     chmod +x .github/workflows/ascii-script.sh 
+        #     .github/workflows/ascii-script.sh
+    
