--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -32,25 +32,4 @@ jobs:
           run: cat dragon.txt
         
         - name: Deploy
-          run: echo Deploying ... .. .
-
-
-
-
-
-
-
-
-        # runs-on: ubuntu-latest
-        # steps:
-        # - name: checkout repo
-        #   uses: actions/checkout@v4
-
-        # - name: List Repo Files
-        #   run: ls -ltra
-          
-        # - name: Executing shell script
-        #   run: |
-        #     chmod +x .github/workflows/ascii-script.sh 
-        #     .github/workflows/ascii-script.sh
-    
+          run: echo Deploying ... .. 
