--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -3,32 +3,32 @@ name: Generate  ASCII Artwork
 on: push
 
 jobs:
-    build_job-1:
+    build_job_1:
         runs-on: ubuntu-latest
         steps:
-        - name: Install Cowsay Program
-          run: sudo apt-get install cowsay -y
+          - name: Install Cowsay Program
+            run: sudo apt-get install cowsay -y
           
-        - name: Executing cowsay CMD
-          run: cowsay -f dragon "RUN for cover, I am a DRAGON...RAWR" >>dragon.txt
+          - name: Executing cowsay CMD
+            run: cowsay -f dragon "RUN for cover, I am a DRAGON...RAWR" >>dragon.txt
 
-        - name: sleep for 30 seconds
-          run: sleep 30
+          - name: sleep for 30 seconds
+            run: sleep 30
 
-    test_job-2:
+    test_job_2:
         runs-on: ubuntu-latest
         steps:
-        - name: sleep for 30 seconds
-          uses: sleep 30
+          - name: sleep for 30 seconds
+            uses: sleep 30
 
-        - name: Test File Exists
-          run: grep -i "dragon" dragon.txt
+          - name: Test File Exists
+            run: grep -i "dragon" dragon.txt
 
-    deploy_job-3:
+    deploy_job_3:
         runs-on: ubuntu-latest
         steps:
-        - name: Read File
-          run: cat dragon.txt
+          - name: Read File
+            run: cat dragon.txt
         
-        - name: Deploy
-          run: echo Deploying ... .. 
+          - name: Deploy
+            run: echo Deploying ... .. 
