--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -12,15 +12,20 @@ jobs:
           - name: Executing cowsay CMD
             run: cowsay -f dragon "RUN for cover, I am a DRAGON...RAWR" >> dragon.txt
 
-          - name: Sleep for 30 seconds
-            run: sleep 30
+          - name: Upload Dragon text file
+            uses: actions/upload-artifact@v4
+            with:
+              name: dragon-text-file
+              path: dragon.text
 
     test_job_2:
         needs: build_job_1
         runs-on: ubuntu-latest
         steps:
-          - name: Sleep for 30 seconds
-            run: sleep 30
+          - name: Upload Dragon text file
+            uses: actions/download-artifact@v4
+            with:
+              name: dragon-text-file
 
           - name: Test File Exists
             run: grep -i "dragon" dragon.txt
@@ -29,6 +34,11 @@ jobs:
         needs: test_job_2
         runs-on: ubuntu-latest
         steps:
+          - name: Upload Dragon text file
+            uses: actions/download-artifact@v4
+            with:
+              name: dragon-text-file
+
           - name: Read File
             run: cat dragon.txt
         
