--- a/.github/workflows/generate-ascii.yaml
+++ b/.github/workflows/generate-ascii.yaml
@@ -2,6 +2,8 @@ name: Generate ASCII Artwork
 
 on: push
 
+# fixing path
+
 jobs:
     build_job_1:
         runs-on: ubuntu-latest
@@ -16,7 +18,7 @@ jobs:
             uses: actions/upload-artifact@v4
             with:
               name: dragon-text-file
-              path: dragon.text
+              path: dragon.txt
 
     test_job_2:
         needs: build_job_1
