addig repo level secrets

--- a/.github/workflows/variables-secrets.yaml
+++ b/.github/workflows/variables-secrets.yaml
@@ -4,7 +4,6 @@ on: push
 
 env:
     CONTAINER_REGISTRY: docker.io
-    DOCKER_USERNAME: gunamadura
     IMAGE_NAME: github-actions-ngnix
 
 jobs:
@@ -15,9 +14,7 @@ jobs:
               run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
 
             - name: Docker Login
-              env:
-                DOCKER_PASSWORD: s3cUrePaSswoRd
-              run: echo docker login --username=dockerUsername --password=s3cUrePaSsword
+              run: echo docker login --username=dockerUsername --password=${{secrets.DOCKER_PASSWORD}}
             - name: Docker Publish
               run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
     deploy:
