--- a/.github/workflows/variables-secrets.yaml
+++ b/.github/workflows/variables-secrets.yaml
@@ -1,82 +1,34 @@
 name: Exploring Variables and Secrets
 
 on:
-    workflow_dispatch:  # Manual trigger
+    workflow_dispatch:
+
+    # schedule:
+    #   - cron: "*/1 * * * "
 
 env:
     CONTAINER_REGISTRY: docker.io
     IMAGE_NAME: github-actions-ngnix
-    DOCKER_USERNAME: your-docker-username  # Add this to the env section or define it as a secret in GitHub
 
 jobs:
     docker:
         runs-on: ubuntu-latest
         steps:
             - name: Docker Build
-              run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{ env.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+              run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
 
             - name: Docker Login
-              run: echo docker login --username=${{ env.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
-
+              run: echo docker login --username=${{vars.DOCKER_USERNAME}} --password=${{secrets.DOCKER_PASSWORD}}
             - name: Docker Publish
-              run: echo docker push $CONTAINER_REGISTRY/${{ env.DOCKER_USERNAME }}/$IMAGE_NAME:latest
-
+              run: echo docker push $CONTAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
     deploy:
         needs: docker 
+        concurrency: 
+            group: production-deployment
+            cancel-in-progress: true
         runs-on: ubuntu-latest
         steps:
             - name: Docker Run
               run: |
-                echo docker run -d -p 8085:80 $CONTAINER_REGISTRY/${{ env.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+                echo docker run -d -p 8085:80 $CONTAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
                 sleep 600s
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# name: Exploring Variables and Secrets
-
-# on:
-#     workflow_dispatch:
-
-#     # schedule:
-#     #   - cron: "*/1 * * * "
-
-# env:
-#     CONTAINER_REGISTRY: docker.io
-#     IMAGE_NAME: github-actions-ngnix
-
-# jobs:
-#     docker:
-#         runs-on: ubuntu-latest
-#         steps:
-#             - name: Docker Build
-#               run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
-
-#             - name: Docker Login
-#               run: echo docker login --username=${{vars.DOCKER_USERNAME}} --password=${{secrets.DOCKER_PASSWORD}}
-#             - name: Docker Publish
-#               run: echo docker push $CONTAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
-#     deploy:
-#         needs: docker 
-#         runs-on: ubuntu-latest
-#         steps:
-#             - name: Docker Run
-#               run: |
-#                 echo docker run -d -p 8085:80 $CONTAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
-#                 sleep 600s
