--- a/.github/workflows/matrix-configuration.yaml
+++ b/.github/workflows/matrix-configuration.yaml
@@ -6,18 +6,12 @@ on:
 
 jobs:
     deploy-on-ubuntu:
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest] 
         steps:
         - name: Echo Dockmer Details
-          run: docker info
-        
-        - name: Run Images
-          run: docker run hello-world
-
-    deploy-on-windows:
-        runs-on: windows-latest
-        steps:
-        - name: Echo Docker Details
           run: docker info
         
         - name: Run Images
