--- a/.github/workflows/matrix-configuration.yaml
+++ b/.github/workflows/matrix-configuration.yaml
@@ -5,12 +5,12 @@ on:
     workflow_dispatch:
 
 jobs:
-    deploy-on-ubuntu:
-        runs-on: ${{ matrix.os }}
+    deploy:
         strategy:
             matrix:
-                os: [ubuntu-latest, windows-latest] 
-                images: [hello-world,alpine]
+                os: [ubuntu-latest,ubuntu-20.04, windows-latest] 
+                images: [hello-world, alpine]
+        runs-on: ${{ matrix.os }}
         steps:
         - name: Echo Dockmer Details
           run: docker info
