--- a/.github/workflows/variables-secrets.yaml
+++ b/.github/workflows/variables-secrets.yaml
@@ -2,6 +2,7 @@ name: Exploring Variables and Secrets
 
 on:
     workflow_dispatch:
+    push:
 
     # schedule:
     #   - cron: "*/1 * * * "
@@ -22,6 +23,7 @@ jobs:
             - name: Docker Publish
               run: echo docker push $CONTAINER_REGISTRY/${{vars.DOCKER_USERNAME}}/$IMAGE_NAME:latest
     deploy:
+        if: github.ref == 'refs/heads/main'
         needs: docker 
         concurrency: 
             group: production-deployment
