--- a/.github/workflows/debug.yaml
+++ b/.github/workflows/debug.yaml
@@ -17,7 +17,7 @@ jobs:
 
         - name: Step 2 - Set USER_1 as USERNAME
           run: |
-            echo "USERNAME-$USER_1" >> $GITHUB_ENV
+            echo "USERNAME=$USER_1" >> $GITHUB_ENV
 
         - name: Step 3 Printing USERNAME
           run:
